CASSSIDECAR-194: Deprecate Java 8 support for Sidecar Server
Patch by Francisco Guerrero; reviewed by TBD for CASSSIDECAR-194